audio minuses to Amina added
