# storage/api-docs/api-docs.json
@@ -533,6 +533,140 @@
                 }
             }
         },
+        "/api/amina/news": {
+            "get": {
+                "tags": [
+                    "Amina"
+                ],
+                "summary": "Все новости",
+                "description": "Returns a collection of news articles filtered by project ID 1, including articles with and without images.",
+                "operationId": "1f654b123bb56d589d789c1b4b248ae6",
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No news found for the specified project",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/amina/news/{id}": {
+            "get": {
+                "tags": [
+                    "Amina"
+                ],
+                "summary": "Новость по ID",
+                "description": "Returns a news article for the specified ID.",
+                "operationId": "0e8023c9c7b05c7e1f4810abc4abb190",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the news article",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "News record not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/amina/audio_minuses": {
+            "get": {
+                "tags": [
+                    "Amina"
+                ],
+                "summary": "Все аудио минусы",
+                "description": "Returns a collection of audio minuses.",
+                "operationId": "45c5e5d2581ddf7ce98c723db74d9d61",
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No audios minuses found.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/amina/audio_minuses/{id}": {
+            "get": {
+                "tags": [
+                    "Amina"
+                ],
+                "summary": "Аудио минус по ID",
+                "description": "Returns an audio minus for the specified ID.",
+                "operationId": "2119d13feb03ee3a342a378b435bd27c",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the audio minus record",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Audio record not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/master_dig_tech/services": {
             "get": {
                 "tags": [
